Completed Basic format.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             Sanket Pande
                         </div>
                         <div class="job-title">
-                            Frontend Developer
+                            Fullstack Engineer
                         </div>
                     </div>
 
@@ -34,40 +34,49 @@
                         </div>
 
                         <div class="topic-container f-small">
-                            <span class="sub-heading">
+                            <span class="sub-heading hlp">
                                 Phone :
                             </span>
-                            <span class="content">
-                                Lorem ipsum dolor
+                            <span class="content hlp">
+                                8459689469
                             </span>
                         </div>
 
                         <div class="topic-container f-small">
-                            <span class="sub-heading">
+                            <span class="sub-heading hlp">
                                 Email :
                             </span>
-                            <span class="content">
-                                Lorem ipsum dolor
+                            <span class="content hlp">
+                                <a href="" class="i-size" >sanketpande99001@gmail.com</a>
                             </span>
                         </div>
 
                         <div class="topic-container f-small">
-                            <span class="sub-heading">
+                            <span class="sub-heading hlp">
                                 Linkedin :
                             </span>
-                            <span class="content">
-                                Lorem ipsum dolor
+                            <span class="content hlp">
+                                <a href="https://www.linkedin.com/in/sanket-pande/" class="i-size">https://www.linkedin.com/in/sanket-pande/</a> 
                             </span>
                         </div>
 
                         <div class="topic-container f-small">
+                            <span class="sub-heading hlp">
+                                Github :
+                            </span>
+                            <span class="content hlp">
+                                <a href="https://github.com/sanket-pande" class="i-size">https://github.com/sanket-pande</a>
+                            </span>
+                        </div>
+
+                        <!-- <div class="topic-container f-small">
                             <span class="sub-heading">
                                 Address :
                             </span>
                             <span class="content">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, provident.
                             </span>
-                        </div>
+                        </div> -->
 
 
                     </div>
@@ -77,6 +86,79 @@
                 <div class="resume-body">
 
                     <div class="left-body section-padding p-0">
+
+                        <section class="resume-section">
+                            <div class="section-heading">
+                                SKILLS
+                            </div>
+
+                            <div class="skill-name">Languages and Frameworks</div>
+                            <ul class="skill-list ">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>Javascript</li>
+                                <li>React</li>
+                                <li>Java</li>
+                                <li>Android</li>
+                                <li>Python</li>
+                                <li>Django</li>
+                                <li>PHP</li>
+                                <li>Drupal</li>
+                            </ul>
+
+                            <div class="skill-name">Social Skills</div>
+                            <ul class="skill-list last-list">
+                                <li>Leadership and Responsibility</li>
+                                <li>Problem Solving and Analytical Thinking</li>
+                                <li>Communication and Teamwork</li>
+                            </ul>
+
+                        </section>
+
+                        <section class="resume-section">
+                            <div class="section-heading">
+                                EDUCATION
+                            </div>
+
+                            <div class="point-container">
+                                <div class="sub-heading ">
+                                    Bachelor of Engineering (2015-2019)
+                                </div>
+                                <div class="content f-small">
+                                    JSPM's Rajarshi Shahu College of Engineering, Tathawade, Pune
+                                </div>
+                                <div class="content f-small highlight">
+                                    <span class="i-size">SGPA:</span>
+                                    <span class="i-size">7.26</span>
+                                </div>
+                            </div>
+
+                            <div class="point-container">
+                                <div class="sub-heading ">
+                                    HSC (12th Grade) (2013-2015)
+                                </div>
+                                <div class="content f-small">
+                                    Bharat English School and Junior College, Shivajinagar, Pune
+                                </div>
+                                <div class="content f-small highlight">
+                                    <span class="i-size">Percentage:</span>
+                                    <span class="i-size">72.2</span>
+                                </div>
+                            </div>
+
+                            <div class="point-container">
+                                <div class="sub-heading ">
+                                    AISSC (10th Grade) (2013-2015)
+                                </div>
+                                <div class="content f-small">
+                                    Bharati Vidyapeeth's English Medium School, Balewadi, Pune
+                                </div>
+                                <div class="content f-small highlight">
+                                    <span class="i-size">Percentage:</span>
+                                    <span class="i-size">84.4</span>
+                                </div>
+                            </div>
+                        </section>
 
                     </div>
                     <div class="right-body section-padding p-0">
@@ -95,21 +177,58 @@
                             <div class="section-heading">
                                 EMPLOYMENT HISTORY
                             </div>
-                            <div class="content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, cum? Quam cupiditate commodi delectus ullam expedita explicabo harum est repellendus! Facere ratione in natus accusantium molestiae quisquam doloremque esse cumque. Repudiandae asperiores
-                                impedit doloremque labore iusto,
+                            <div class="point-container">
+                                <div class="content b">
+                                    Worked as Solution Analyst - (July 2019 - March 2021)
+                                </div>
+                                <div class="content">
+                                    Sankey Solutions
+                                </div>
                             </div>
                         </section>
 
+                        <!-- <div class="b-line"></div> -->
+
                         <section class="resume-section">
                             <div class="section-heading">
-                                EDUCATION
+                                EXPERIENCE AND SKILLS
                             </div>
-                            <div class="content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, cum? Quam cupiditate commodi delectus ullam expedita explicabo harum est repellendus! Facere ratione in natus accusantium molestiae quisquam doloremque esse cumque. Repudiandae asperiores
-                                impedit doloremque labore iusto,
+
+                            <div class="point-container">
+                                <div class="content b">Android App Developement and Backend Developement using Drupal</div>
+                                <ul class="skill-list">
+                                    <li></li>
+                                    <li></li>
+                                </ul>
                             </div>
+
+                            <div class="point-container">
+                                <div class="content b">Website Developement using Drupal, HTML, CSS and Javascript</div>
+                                <ul class="skill-list">
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </div>
+
+                            <div class="point-container">
+                                <div class="content b">Website Developement using React</div>
+                                <ul class="skill-list">
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </div>
+
+                            <div class="point-container">
+                                <div class="content b">Backend Developement using Django</div>
+                                <ul class="skill-list">
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </div>
+
                         </section>
+
+
 
                     </div>
 
