remaining profile info and some optimizations

--- a/index.html
+++ b/index.html
@@ -169,11 +169,10 @@
                             </div>
                             <div class="content">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, cum? Quam cupiditate commodi delectus ullam expedita explicabo harum est repellendus! Facere ratione in natus accusantium molestiae quisquam doloremque esse cumque. Repudiandae asperiores
-                                impedit doloremque labore iusto,
                             </div>
                         </section>
 
-                        <section class="resume-section">
+                        <section class="resume-section experience">
                             <div class="section-heading">
                                 EMPLOYMENT HISTORY
                             </div>
@@ -185,44 +184,45 @@
                                     Sankey Solutions
                                 </div>
                             </div>
-                        </section>
+                            <!-- </section> -->
 
-                        <!-- <div class="b-line"></div> -->
+                            <div class="b-line"></div>
 
-                        <section class="resume-section">
+                            <!-- <section class="resume-section experience"> -->
                             <div class="section-heading">
                                 EXPERIENCE AND SKILLS
                             </div>
 
                             <div class="point-container">
-                                <div class="content b">Android App Developement and Backend Developement using Drupal</div>
+                                <div class="content b f-mid">Android App Developement and Backend Developement</div>
                                 <ul class="skill-list">
-                                    <li></li>
-                                    <li></li>
+                                    <li>Worked as a lead developer for an android app for farmers, where they could ask questions to Experts, create an Account, like and track their interests and questions in a news feed.</li>
+                                    <li>The farmers could get notifications for new events by different experts, watch and chat on live youtube videos directly within the app.</li>
+                                    <li>Used Drupal for backend and google API's for signup, login, youtube live videos, and live chat.</li>
                                 </ul>
                             </div>
 
                             <div class="point-container">
-                                <div class="content b">Website Developement using Drupal, HTML, CSS and Javascript</div>
+                                <div class="content b f-mid">Website Developement and Cloud Infrastructure Management</div>
                                 <ul class="skill-list">
-                                    <li></li>
-                                    <li></li>
+                                    <li>Worked with one of the top 10 news organisations of India to manage their website and provide technical support.</li>
+                                    <li>Managed their Cloud Infrastructure using AWS and worked on web developement using technologies like Drupal, HTML, CSS and Javascript as well as Google Analytics and Google Ad Manager.</li>
+                                    <li>Worked as a lead to create new user interface and functionality design for the website using the mentioned technologies.</li>
                                 </ul>
                             </div>
 
                             <div class="point-container">
-                                <div class="content b">Website Developement using React</div>
+                                <div class="content b f-mid">Frontend Developement using React</div>
                                 <ul class="skill-list">
-                                    <li></li>
-                                    <li></li>
+                                    <li>Worked to design new user-interface for a website in react.</li>
                                 </ul>
                             </div>
 
                             <div class="point-container">
-                                <div class="content b">Backend Developement using Django</div>
+                                <div class="content b f-mid">Backend Developement using Django</div>
                                 <ul class="skill-list">
-                                    <li></li>
-                                    <li></li>
+                                    <li>Worked with one of the top automobile manufacturing company in India, on a web portal to track customer's vehicles and manage their business.</li>
+                                    <li>Used django as a backend with docker and kubernates in a microservices architecture with CICD using github and jenkins.</li>
                                 </ul>
                             </div>
 
