--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@
                             <div class="section-heading">
                                 PROFILE
                             </div>
-                            <div class="content">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, cum? Quam cupiditate commodi delectus ullam expedita explicabo harum est repellendus! Facere ratione in natus accusantium molestiae quisquam doloremque esse cumque. Repudiandae asperiores
+                            <div class="p-summary content">
+                                Full Stack Developer with hands-on experience of designing, developing, and implementing applications and solutions using a range of technologies and programming languages in both Frontend as well as Backend. Seeking to leverage my skills in a challenging
+                                role.
                             </div>
                         </section>
 
@@ -205,8 +206,8 @@
                             <div class="point-container">
                                 <div class="content b f-mid">Website Developement and Cloud Infrastructure Management</div>
                                 <ul class="skill-list">
-                                    <li>Worked with one of the top 10 news organisations of India to manage their website and provide technical support.</li>
-                                    <li>Managed their Cloud Infrastructure using AWS and worked on web developement using technologies like Drupal, HTML, CSS and Javascript as well as Google Analytics and Google Ad Manager.</li>
+                                    <li>Worked with one of the top 10 news organisations of India to manage the website and provide technical support.</li>
+                                    <li>Managed Cloud Infrastructure using AWS and worked on web developement using technologies like Drupal, HTML, CSS and Javascript as well as Google Analytics and Google Ad Manager.</li>
                                     <li>Worked as a lead to create new user interface and functionality design for the website using the mentioned technologies.</li>
                                 </ul>
                             </div>
@@ -221,8 +222,8 @@
                             <div class="point-container">
                                 <div class="content b f-mid">Backend Developement using Django</div>
                                 <ul class="skill-list">
-                                    <li>Worked with one of the top automobile manufacturing company in India, on a web portal to track customer's vehicles and manage their business.</li>
-                                    <li>Used django as a backend with docker and kubernates in a microservices architecture with CICD using github and jenkins.</li>
+                                    <li>Worked with one of the top automobile manufacturing company in India, on a web portal for their customers to track vehicles and manage business.</li>
+                                    <li>Used django backend with docker and kubernates in a microservices architecture with CICD using github and jenkins.</li>
                                 </ul>
                             </div>
 
