--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                                 <li>CSS</li>
                                 <li>Javascript</li>
                                 <li>React</li>
+                                <li>Angular</li>
                                 <li>Java</li>
                                 <li>Android</li>
                                 <li>Python</li>
@@ -198,7 +199,6 @@
                                 <div class="content b f-mid">Android App Developement and Backend Developement</div>
                                 <ul class="skill-list">
                                     <li>Worked as a lead developer for an android app for farmers, where they could ask questions to Experts, create an Account, like and track their interests and questions in a news feed.</li>
-                                    <li>The farmers could get notifications for new events by different experts, watch and chat on live youtube videos directly within the app.</li>
                                     <li>Used Drupal for backend and google API's for signup, login, youtube live videos, and live chat.</li>
                                 </ul>
                             </div>
@@ -213,9 +213,10 @@
                             </div>
 
                             <div class="point-container">
-                                <div class="content b f-mid">Frontend Developement using React</div>
+                                <div class="content b f-mid">Frontend Developement using React and Angular</div>
                                 <ul class="skill-list">
-                                    <li>Worked to design new user-interface for a website in react.</li>
+                                    <li>Worked on redesigning a HTML and bootstrap based website for a CMS in react.</li>
+                                    <li>Worked on designing frontend in Angular for one of the top automobile manufacturing company in India.</li>
                                 </ul>
                             </div>
 
