Updated Skills Panel

--- a/index.html
+++ b/index.html
@@ -93,18 +93,29 @@
                             </div>
 
                             <div class="skill-name">Languages and Frameworks</div>
-                            <ul class="skill-list ">
+                            <ul class="skill-list lang-frmwrk">
                                 <li>HTML</li>
                                 <li>CSS</li>
+                                <li>SCSS</li>
+                                <li>Bootstrap</li>
                                 <li>Javascript</li>
                                 <li>React</li>
                                 <li>Angular</li>
-                                <li>Java</li>
+                                <!-- <li>Node.js</li> -->
                                 <li>Android</li>
+                                <li>Java</li>
+                                <li>Kotlin</li>
                                 <li>Python</li>
                                 <li>Django</li>
+                                <li>Git</li>
                                 <li>PHP</li>
-                                <li>Drupal</li>
+                                <li>Drupal</li>                        
+                                <li>CICD</li>
+                                <li>Jenkins</li>
+                                <li>MySQL</li>
+                                <li>PostgreSQL</li>
+                                <li>MongoDB</li>
+                                <li>Google Apps Script</li>
                             </ul>
 
                             <div class="skill-name">Social Skills</div>
@@ -169,7 +180,7 @@
                                 PROFILE
                             </div>
                             <div class="p-summary content">
-                                Full Stack Developer with hands-on experience of designing, developing, and implementing applications and solutions using a range of technologies and programming languages in both Frontend as well as Backend. Seeking to leverage my skills in a challenging
+                                Full Stack Engineer with hands-on experience of designing, developing, and implementing applications and solutions using a range of technologies and programming languages in both Frontend as well as Backend. Seeking to leverage my skills in a challenging
                                 role.
                             </div>
                         </section>
