Added print functionality and seperated the template from the main page

--- a/index.html
+++ b/index.html
@@ -12,248 +12,24 @@
 
 <body>
 
-    <div class="book">
-        <div class="page">
-            <div class="subpage">
+    <div class="main-container">
 
+        <span class="project-desc b">Resume Maker</span>
+        <span class="project-desc">Project to create a Updated Resume from a predefined Template</span>
 
-                <div class="resume-header">
+        <iframe src="./resumePage.html" frameborder="0" class="iframe-container" id="resume-container"></iframe>
 
-                    <div class="name-section">
-                        <div class="name">
-                            Sanket Pande
-                        </div>
-                        <div class="job-title">
-                            Fullstack Engineer
-                        </div>
-                    </div>
+        <span class="project-desc">Container with Red Border is your Resume Template.</span>
+        <span class="project-desc">Change the Values in the resumepage.html to your according to your profile.</span>
+        <span class="project-desc">Use Chrome Browser and (&#10003; Check) <i>Background Graphics</i> in Print Dialog to print the resume properly.</span>
 
-                    <div class="info-section section-padding">
-                        <div class="section-heading">
-                            INFO
-                        </div>
+        <button class="btn" id="print-resume-btn">
+            Print
+        </button>
 
-                        <div class="topic-container f-small">
-                            <span class="sub-heading hlp">
-                                Phone :
-                            </span>
-                            <span class="content hlp">
-                                8459689469
-                            </span>
-                        </div>
-
-                        <div class="topic-container f-small">
-                            <span class="sub-heading hlp">
-                                Email :
-                            </span>
-                            <span class="content hlp">
-                                <a href="" class="i-size" >sanketpande99001@gmail.com</a>
-                            </span>
-                        </div>
-
-                        <div class="topic-container f-small">
-                            <span class="sub-heading hlp">
-                                Linkedin :
-                            </span>
-                            <span class="content hlp">
-                                <a href="https://www.linkedin.com/in/sanket-pande/" class="i-size">https://www.linkedin.com/in/sanket-pande/</a> 
-                            </span>
-                        </div>
-
-                        <div class="topic-container f-small">
-                            <span class="sub-heading hlp">
-                                Github :
-                            </span>
-                            <span class="content hlp">
-                                <a href="https://github.com/sanket-pande" class="i-size">https://github.com/sanket-pande</a>
-                            </span>
-                        </div>
-
-                        <!-- <div class="topic-container f-small">
-                            <span class="sub-heading">
-                                Address :
-                            </span>
-                            <span class="content">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, provident.
-                            </span>
-                        </div> -->
-
-
-                    </div>
-
-                </div>
-
-                <div class="resume-body">
-
-                    <div class="left-body section-padding p-0">
-
-                        <section class="resume-section">
-                            <div class="section-heading">
-                                SKILLS
-                            </div>
-
-                            <div class="skill-name">Languages and Frameworks</div>
-                            <ul class="skill-list lang-frmwrk">
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>SCSS</li>
-                                <li>Bootstrap</li>
-                                <li>Javascript</li>
-                                <li>React</li>
-                                <li>Angular</li>
-                                <!-- <li>Node.js</li> -->
-                                <li>Android</li>
-                                <li>Java</li>
-                                <li>Kotlin</li>
-                                <li>Python</li>
-                                <li>Django</li>
-                                <li>Git</li>
-                                <li>PHP</li>
-                                <li>Drupal</li>                        
-                                <li>CICD</li>
-                                <li>Jenkins</li>
-                                <li>MySQL</li>
-                                <li>PostgreSQL</li>
-                                <li>MongoDB</li>
-                                <li>Google Apps Script</li>
-                            </ul>
-
-                            <div class="skill-name">Social Skills</div>
-                            <ul class="skill-list last-list">
-                                <li>Leadership and Responsibility</li>
-                                <li>Problem Solving and Analytical Thinking</li>
-                                <li>Communication and Teamwork</li>
-                            </ul>
-
-                        </section>
-
-                        <section class="resume-section">
-                            <div class="section-heading">
-                                EDUCATION
-                            </div>
-
-                            <div class="point-container">
-                                <div class="sub-heading ">
-                                    Bachelor of Engineering (2015-2019)
-                                </div>
-                                <div class="content f-small">
-                                    JSPM's Rajarshi Shahu College of Engineering, Tathawade, Pune
-                                </div>
-                                <div class="content f-small highlight">
-                                    <span class="i-size">SGPA:</span>
-                                    <span class="i-size">7.26</span>
-                                </div>
-                            </div>
-
-                            <div class="point-container">
-                                <div class="sub-heading ">
-                                    HSC (12th Grade) (2013-2015)
-                                </div>
-                                <div class="content f-small">
-                                    Bharat English School and Junior College, Shivajinagar, Pune
-                                </div>
-                                <div class="content f-small highlight">
-                                    <span class="i-size">Percentage:</span>
-                                    <span class="i-size">72.2</span>
-                                </div>
-                            </div>
-
-                            <div class="point-container">
-                                <div class="sub-heading ">
-                                    AISSC (10th Grade) (2013-2015)
-                                </div>
-                                <div class="content f-small">
-                                    Bharati Vidyapeeth's English Medium School, Balewadi, Pune
-                                </div>
-                                <div class="content f-small highlight">
-                                    <span class="i-size">Percentage:</span>
-                                    <span class="i-size">84.4</span>
-                                </div>
-                            </div>
-                        </section>
-
-                    </div>
-                    <div class="right-body section-padding p-0">
-
-                        <section class="resume-section">
-                            <div class="section-heading">
-                                PROFILE
-                            </div>
-                            <div class="p-summary content">
-                                Full Stack Engineer with hands-on experience of designing, developing, and implementing applications and solutions using a range of technologies and programming languages in both Frontend as well as Backend. Seeking to leverage my skills in a challenging
-                                role.
-                            </div>
-                        </section>
-
-                        <section class="resume-section experience">
-                            <div class="section-heading">
-                                EMPLOYMENT HISTORY
-                            </div>
-                            <div class="point-container">
-                                <div class="content b">
-                                    Worked as Solution Analyst - (July 2019 - March 2021)
-                                </div>
-                                <div class="content">
-                                    Sankey Solutions
-                                </div>
-                            </div>
-                            <!-- </section> -->
-
-                            <div class="b-line"></div>
-
-                            <!-- <section class="resume-section experience"> -->
-                            <div class="section-heading">
-                                EXPERIENCE AND SKILLS
-                            </div>
-
-                            <div class="point-container">
-                                <div class="content b f-mid">Android App Developement and Backend Developement</div>
-                                <ul class="skill-list">
-                                    <li>Worked as a lead developer for an android app for farmers, where they could ask questions to Experts, create an Account, like and track their interests and questions in a news feed.</li>
-                                    <li>Used Drupal for backend and google API's for signup, login, youtube live videos, and live chat.</li>
-                                </ul>
-                            </div>
-
-                            <div class="point-container">
-                                <div class="content b f-mid">Website Developement and Cloud Infrastructure Management</div>
-                                <ul class="skill-list">
-                                    <li>Worked with one of the top 10 news organisations of India to manage the website and provide technical support.</li>
-                                    <li>Managed Cloud Infrastructure using AWS and worked on web developement using technologies like Drupal, HTML, CSS and Javascript as well as Google Analytics and Google Ad Manager.</li>
-                                    <li>Worked as a lead to create new user interface and functionality design for the website using the mentioned technologies.</li>
-                                </ul>
-                            </div>
-
-                            <div class="point-container">
-                                <div class="content b f-mid">Frontend Developement using React and Angular</div>
-                                <ul class="skill-list">
-                                    <li>Worked on redesigning a HTML and bootstrap based website for a CMS in react.</li>
-                                    <li>Worked on designing frontend in Angular for one of the top automobile manufacturing company in India.</li>
-                                </ul>
-                            </div>
-
-                            <div class="point-container">
-                                <div class="content b f-mid">Backend Developement using Django</div>
-                                <ul class="skill-list">
-                                    <li>Worked with one of the top automobile manufacturing company in India, on a web portal for their customers to track vehicles and manage business.</li>
-                                    <li>Used django backend with docker and kubernates in a microservices architecture with CICD using github and jenkins.</li>
-                                </ul>
-                            </div>
-
-                        </section>
-
-
-
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
     </div>
 
-    <button class="btn">
-      Print
-    </button>
+    <script src="./index.js"></script>
 
 </body>
 
