Updated: How to use section and css fixes

--- a/index.html
+++ b/index.html
@@ -15,13 +15,21 @@
     <div class="main-container">
 
         <span class="project-desc b">Resume Maker</span>
-        <span class="project-desc">Project to create a Updated Resume from a predefined Template</span>
+        <span class="project-desc mt">Project to create a Updated Resume from a predefined Template</span>
 
         <iframe src="./resumePage.html" frameborder="0" class="iframe-container" id="resume-container"></iframe>
 
-        <span class="project-desc">Container with Red Border is your Resume Template.</span>
-        <span class="project-desc">Change the Values in the resumepage.html to your according to your profile.</span>
-        <span class="project-desc">Use Chrome Browser and (&#10003; Check) <i>Background Graphics</i> in Print Dialog to print the resume properly.</span>
+        <span class="project-desc b">
+            How to Use
+        </span>
+        <span class="project-desc">
+            <ul>
+                <li>Container with Red Border is your Resume Template.</li>
+                <li>Change the values in the <b>resumepage.html</b> to your according to your profile.</li>
+                <li>Use Chrome Browser for the best experience.</li>
+                <li>(✓ Check) <i>Background Graphics</i> in Print Dialog to print the resume properly.</li>
+            </ul>
+        </span>
 
         <button class="btn" id="print-resume-btn">
             Print
