--- a/resumePage.html
+++ b/resumePage.html
@@ -146,7 +146,7 @@
 
                         <div class="point-container">
                             <div class="sub-heading ">
-                                HSC (12th Grade) (2013-2015)
+                                HSC (12th Grade) (2015)
                             </div>
                             <div class="content f-small">
                                 Bharat English School and Junior College, Shivajinagar, Pune
@@ -159,7 +159,7 @@
 
                         <div class="point-container">
                             <div class="sub-heading ">
-                                AISSC (10th Grade) (2013-2015)
+                                AISSC (10th Grade) (2013)
                             </div>
                             <div class="content f-small">
                                 Bharati Vidyapeeth's English Medium School, Balewadi, Pune
